force-app/src/objects/ffcmutil__TransactionLineItemLog__c.object
<CustomObject>
    <fields>
        <fullName>ffcmutil__NewAccountOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>New Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__NewDocumentOutstandingValue__c</fullName>
        <label>New Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__NewDualOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>New Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__NewHomeOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>New Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__NewMatchingStatus__c</fullName>
        <label>New Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffcmutil__OldAccountOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Old Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OldDocumentOutstandingValue__c</fullName>
        <label>Old Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OldDualOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Old Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OldHomeOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Old Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OldMatchingStatus__c</fullName>
        <label>Old Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffcmutil__TransactionLineItemName__c</fullName>
        <label>Transaction Line Item Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Transaction Line Item Log</label>
    <nameField>
        <label>Transaction Line Item Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Line Items Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>